Se puso a trabajar el header

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,26 +1,105 @@
-@import '../.:/../../../styles.scss';
+@import "../.:/../../../styles.scss";
 
-.header{
+.header {
   background-color: $black;
-  &-content{
-    &-box1{
-      div{
+  height: 100px;
+  z-index: 9999;
+  &-content {
+    &-box1 {
+      div {
         background-color: $blue;
         max-width: 145px;
         height: 145px;
         z-index: 1;
-        img{
+        img {
           width: 80%;
         }
       }
     }
-    &-box2{
-      nav{
-        height: 100px;
-        ul{
-          max-width: 600px;
-          width: 100%;
-          margin-bottom: 0;
+    &-box2 {
+      ul {
+        max-width: 600px;
+        width: 100%;
+        margin-bottom: 0;
+        li {
+          font-weight: bold;
+          @extend %gfont;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .header {
+    position: absolute;
+    transition: height 0.5s;
+    -webkit-transition: height 0.5s;
+    -moz-transition: height 0.5s;
+    -ms-transition: height 0.5s;
+    -o-transition: height 0.5s;
+    &-content {
+      &-box1 {
+      }
+      &-box2 {
+        position: absolute;
+        z-index: 99;
+        nav {
+          max-width: 200px;
+          margin: auto;
+          height: 500px;
+          opacity: 0;
+          pointer-events: none;
+
+          transition: opacity 0.2s;
+          -webkit-transition: opacity 0.2s;
+          -moz-transition: opacity 0.2s;
+          -ms-transition: opacity 0.2s;
+          -o-transition: opacity 0.2s;
+          li {
+            margin-bottom: 1rem;
+            font-size: 1rem;
+
+            &:last-child {
+              margin-bottom: 0rem;
+            }
+          }
+        }
+
+        .menu-open {
+          filter: invert(1);
+          -webkit-filter: invert(1);
+          width: 40px;
+          height: 40px;
+          top: 30px;
+          right: 0;
+        }
+      }
+    }
+  }
+  .menu-active {
+    height: 500px;
+    .header-content {
+      &-box1 {
+      }
+      &-box2 {
+        .menu-open {
+          filter: invert(1);
+          -webkit-filter: invert(1);
+          width: 40px;
+          height: 40px;
+          content: url(../../../assets/img/icons/menu-close.png);
+        }
+        nav {
+          opacity: 1;
+          transition: opacity 0.7s;
+          -webkit-transition: opacity 0.7s;
+          -moz-transition: opacity 0.7s;
+          -ms-transition: opacity 0.7s;
+          -o-transition: opacity 0.7s;
+          ul {
+            pointer-events: all;
+          }
         }
       }
     }
