--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,13 +1,20 @@
-<header class="container-fluid px-5 header">
+<header id="header" class="container-fluid px-5 header">
   <div class="row header-content">
     <div class="col-12 col-lg-6 position-relative header-content-box1">
       <div class="position-absolute d-flex justify-content-center align-items-center">
         <img src="../../../assets/img/logos/vality.svg" alt="VALITY">
       </div>
     </div>
-    <div class="col-12 col-lg-6 header-content-box2 ">
+    <div class="col-12 col-lg-6 header-content-box2 position-relative">
+      <img
+          (click)="menu()"
+          class="menu-open position-absolute"
+          src="../../../assets/img/icons/menu-open.png"
+          alt="Open menu"
+        />
       <nav class="d-flex justify-content-end align-items-center">
-        <ul class="d-flex align-items-center justify-content-between">
+
+        <ul class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
           <li>PORTFOLIO</li>
           <li>INVESTMENT</li>
           <li>LANGUAGES</li>
