--- a/src/app/components/nft-item/nft-item.component.scss
+++ b/src/app/components/nft-item/nft-item.component.scss
@@ -1,37 +1,62 @@
-@import '../.:/../../../styles.scss';
-$border:.4rem;
-.item{
-  .nft{
-    background-color: $blue;
+@import "../.:/../../../styles.scss";
+$border: 0.4rem;
+.item {
+  cursor: pointer;
+  &:hover {
+    .nft {
+      &::after {
+        content: "";
+        transform: translateY(0);
+      }
+    }
+    .price-mint {
+      opacity: 1 !important;
+    }
+  }
+
+  .nft {
     height: 385px;
     width: 100%;
     max-width: 260px;
-    border-radius: 2rem 2rem 0 0;
-    background-image: url(../../../assets/img/logos/M1.svg);
-    background-size: contain;
-    background-repeat: no-repeat;
-    img{
+    &::after {
+      content: "";
+      width: 100%;
+      height: 100%;
+      border-radius: 2rem 2rem 0 0;
+      background-color: $blue;
+      position: absolute;
+      background-image: url(../../../assets/img/logos/M1.svg);
+      background-size: contain;
+      background-repeat: no-repeat;
+      transform: translateY(100%);
+      transition: all .35s;
+    }
+    img {
       max-width: 270px;
       position: absolute;
       top: -80px;
+      z-index: 9;
     }
-    .price-mint{
+    .price-mint {
+      opacity: 0;
+      z-index: 9;
       margin-bottom: 2rem;
-      &-box{
-        span{
+      transition: all .35s;
+      &-box {
+        span {
           @extend %gfont;
         }
-        .price-text{
-          font-size: .65rem;
+        .price-text {
+          font-size: 0.65rem;
           font-weight: bold;
           top: -5px;
         }
-        .price-number{
+        .price-number {
           font-size: 2rem;
           font-weight: 400;
         }
       }
-      .btn-plus{
+      .btn-plus {
         border-radius: $border;
         background-color: $gray;
         width: 40px;
@@ -48,7 +73,6 @@ $border:.4rem;
         font-weight: 400;
         @extend %gfont;
       }
-
     }
   }
 }
