--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,8 +2,7 @@
   <div class="home-section1 d-flex align-items-end position-relative">
     <div class="row width-one">
       <div class="col-12">
-        <h4 class="home-section1-title1 ">REAL STATE </h4>
-        <h4 class="home-section1-title2">WITH BLOCKCHAIN</h4>
+        <h4>REAL STATE <br> <span> WITH BLOCKCHAIN</span></h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
           Ipsum doloremque blanditiis dignissimos architecto culpa rem<br>
           vel libero nesciunt porro placeat</p>
@@ -24,25 +23,24 @@
   <div class="home-section2 ">
     <div class="row width-one">
       <div class="col-12 col-lg-6 home-section2-box1 d-flex flex-column align-items-center">
-        <h4 class="home-section2-box1-title1">HOW IT</h4>
-        <h4 class="home-section2-box1-title2">WORKS</h4>
+        <h4>HOW IT <br><span>WORKS</span></h4>
 
       </div>
       <div class="col-12 col-lg-6 home-section2-box2  d-flex flex-column ">
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit.
           Sunt porro aliquid reiciendis veniam quod eum delectus ipsam adipisci, numquam dolore libero quae. Laboriosam
-          nihil provident  vero nam nostrum facere quisquam ratione teneturdistinctio   odio. Eligendi
+          nihil provident vero nam nostrum facere quisquam ratione teneturdistinctio odio. Eligendi
           temporibus<br><br>
 
           Lorem ipsum, dolor sit amet consectetur adipisicing elit.
           Sunt porro aliquid reiciendis veniam quod eum delectus ipsam adipisci, numquam dolore libero quae. Laboriosam
-          nihil provident  vero nam nostrum facere quisquam ratione teneturdistinctio   odio. Eligendi
+          nihil provident vero nam nostrum facere quisquam ratione teneturdistinctio odio. Eligendi
           temporibus<br><br>
 
           Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-           eum delectus ipsam adipisci, numquam dolore libero quae. Laboriosam
-          nihil provident  vero nam
+          eum delectus ipsam adipisci, numquam dolore libero quae. Laboriosam
+          nihil provident vero nam
 
         </p>
         <app-button></app-button>
@@ -51,7 +49,7 @@
     </div>
   </div>
   <div class="home-section3 position-relative py-3 ">
-    <div class="row width-one py-5" >
+    <div class="row width-one py-5">
       <div class="col-12 col-lg-6 d-flex flex-column justify-content-center mt-5 home-section3-box1 ">
         <h4 class="home-section3-box1-title1">QUALITIES</h4>
         <h4 class="home-section3-box1-title2">AROUND</h4>
@@ -77,9 +75,8 @@
 
   </div>
   <div class="home-section4">
-    <div class="row width-one" >
-        <h4 class="home-section4-title1">INVESTMENT</h4>
-        <h4 class="home-section4-title2"><span>EASY</span> FOR YOU</h4>
+    <div class="row width-one">
+      <h4 class="home-section4-title1">INVESTMENT<br> EASY<span> FOR YOU</span></h4>
 
       <div class="col-12 home-section4-contents">
         <div class="home-section4-contents-nft">
@@ -87,11 +84,85 @@
           <app-nft-item nft="2"></app-nft-item>
           <app-nft-item nft="3"></app-nft-item>
           <app-nft-item nft="4"></app-nft-item>
-
         </div>
-
       </div>
+
+    </div>
+  </div>
+  <div class="home-section5">
+    <div class="row justify-content-center">
+      <div class="col-12 col-lg-8 d-flex justify-content-between align-items-start home-section5-box1">
+        <div>
+          <h4>HOW DOES YOUR
+            <br>INVESTMENT<br><span>WILL LOOK LIKE</span>
+          </h4>
+          <h5>
+            PROJECT STATIC
+          </h5>
+          <p>
+            Detail Project
+          </p>
+        </div>
+        <div class="d-flex justify-content-between btns">
+          <button class="btn1">Project Done</button>
+          <button class="btn2">2022</button>
+        </div>
+      </div>
+      <div class="col-12 col-lg-4 home-section5-box2"></div>
     </div>
 
+  </div>
+  <div class="home-section6 position-relative">
+    <div class="row">
+      <div class="col-12 col-lg-6 home-section6-box1">
+        <img src="../../../assets/img/content&bg/home6.png" alt="">
+      </div>
+      <div class="col-12 col-lg-6 home-section6-box2 d-flex flex-column justify-content-center">
+        <h4>YOUR ACCOUNT <br> <span>SAFE AND SECURE</span> </h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+          Sunt porro aliquid reiciendis veniam quod eum delectus ipsam adipisci, numquam dolore libero quae. Laboriosam
+          nihil provident vero nam nostrum facere quisquam ratione teneturdistinctio odio. Eligendi
+          temporibus<br><br>
+
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+          Sunt porro aliquid reiciendis veniam quod eum delectus ipsam adipisci, numquam dolore libero quae. Laboriosam
+          nihil provident vero nam nostrum facere quisquam ratione teneturdistinctio odio. Eligendi
+          temporibus.
+        </p>
+        <app-button></app-button>
+      </div>
+    </div>
+  </div>
+  <div class="row home-section7">
+    <div class="col-12 col-lg-6 d-flex justify-content-center home-section7-box1">
+      <div>
+        <h4>OUR <br><span>INVESTORS</span></h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+          Sunt porro aliquid reiciendis veniam quod eum delectus ipsam adipisci, numquam dolore libero quae. Laboriosam
+          nihil provident vero nam nostrum facere quisquam ratione teneturdistinctio odio. Eligendi
+          temporibus<br><br>
+
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+          Sunt porro aliquid reiciendis veniam quod eum delectus ipsam adipisci, numquam dolore libero quae. Laboriosam
+          nihil provident vero nam nostrum facere quisquam ratione teneturdistinctio odio. Eligendi
+          temporibus.
+        </p>
+      </div>
+    </div>
+    <div class="col-12 col-lg-6 home-section7-box2">
+      <div class="row h-100">
+        <div class="col-12 col-md-4">
+          <app-team name="albert" lastname="turner" rank="ceo"></app-team>
+        </div>
+        <div class="col-12 col-md-4">
+          <app-team name="name2" lastname="turner" rank="ceo"></app-team>
+        </div>
+        <div class="col-12 col-md-4">
+          <app-team name="name3" lastname="turner" rank="ceo"></app-team>
+        </div>
+      </div>
+    </div>
   </div>
 </main>
