--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -75,8 +75,8 @@
 
   </div>
   <div class="home-section4">
-    <div class="row width-one">
-      <h4 class="home-section4-title1">INVESTMENT<br> EASY<span> FOR YOU</span></h4>
+    <div class="row">
+      <h4 class="home-section4-title1 width-one">INVESTMENT<br> EASY<span> FOR YOU</span></h4>
 
       <div class="col-12 home-section4-contents">
         <div class="home-section4-contents-nft">
