--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="col-12 col-lg-4 d-flex align-items-center justify-content-center footer-container-box1">
       <img src="../../../assets/img/logos/vality.svg" alt="Vality">
     </div>
-    <div class="col-12 col-lg-4 d-flex align-items-center justify-content-center footer-container-box2">
+    <div class="col-12 my-5 my-lg-0 col-lg-4 d-flex align-items-center justify-content-center footer-container-box2">
       <img src="../../../assets/img/icons/fb.svg" alt="Facebook">
         <img src="../../../assets/img/icons/ig.svg" alt="Instagram">
         <img src="../../../assets/img/icons/twitter.svg" alt="Twitter">
@@ -11,7 +11,7 @@
     </div>
     <div class="col-12 col-lg-4 footer-container-box3">
       <nav class="d-flex flex-column align-items-center justify-content-center">
-        <ul class="mb-0">
+        <ul class="mb-0 ps-0">
           <li>PORTFOLIO</li>
           <li>INVESTMENT</li>
           <li>LANGUAGES</li>
