--- a/src/app/components/nft-item/nft-item.component.html
+++ b/src/app/components/nft-item/nft-item.component.html
@@ -1,6 +1,6 @@
 <div class="item">
   <div class="nft d-flex align-items-end position-relative">
-    <img src="../../../assets/img/content&bg/nft{{nft}}.png">
+    <img src="../../../assets/img/content-bg/nft{{nft}}.png">
     <div class="price-mint d-flex justify-content-between w-100 position-relative px-2">
       <div class="price-mint-box">
         <span class="position-absolute price-text">PRICE</span>
