--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -9,8 +9,6 @@ img {
   background-color: $white2;
   padding: 3.5rem 0;
   &-container {
-    &-box1 {
-    }
     &-box2 {
       img {
         width: 25px;
@@ -21,6 +19,14 @@ img {
         -moz-transform: translateY(20px);
         -ms-transform: translateY(20px);
         -o-transform: translateY(20px);
+
+        @media screen and (max-width:992px) {
+          transform: translateY(0px);
+          -webkit-transform: translateY(0px);
+          -moz-transform: translateY(0px);
+          -ms-transform: translateY(0px);
+          -o-transform: translateY(0px);
+}
 }
     }
     &-box3 {
