--- a/src/app/components/team/team.component.scss
+++ b/src/app/components/team/team.component.scss
@@ -14,7 +14,7 @@
   &:hover{
     &::after{
       content: "";
-      background-color: transparent;
+      background-color: #00000040;
     }
     .team-data{
       opacity: 1 !important;
@@ -24,7 +24,6 @@
     opacity: 0;
     transition: all .2s;
     margin-bottom: 5rem;
-
     z-index: 99;
     h4{
       text-transform: uppercase;
